[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/UI/ContextBubble.gd" type="Script" id=2]
[ext_resource path="res://assets/arrow.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 5.50917

[node name="ContextBubble" type="Area2D"]
collision_layer = 0
collision_mask = 16
script = ExtResource( 2 )

[node name="UpSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 17, -24 )
frames = SubResource( 3 )
frame = 1
playing = true

[node name="DownSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 17, -13 )
frames = SubResource( 6 )
playing = true
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )
[connection signal="area_entered" from="." to="." method="_on_ContextBubble_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_ContextBubble_area_exited"]
